--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -796,13 +796,14 @@ iframe {
 
 .jumbotron.fortags a {
     padding: 5px 10px 7px;
-    background: #222;
+    background: #1b827c;
     border-radius: 30px;
-    color: #fff;
+    color: #d5d5d5;
     font-weight: 500;
     text-transform: lowercase;
     font-size: 0.8rem;
     display: inline-block;
+    font-family: 'Montserrat', 'sans-serif';
 }
 
 .layout-page .jumbotron.fortags {
