--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,11 +74,11 @@
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/about">Quiénes somos?</a>
+                <a class="nav-link" href="{{ site.baseurl }}/about">¿Quién me explica?</a>
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/about">Otra cosa?</a>
+                <a class="nav-link" href="{{ site.baseurl }}/xqnosotros">¿Por qué con Carlos Muñiz?</a>
                 </li>
 
                 {% include search-lunr.html %}
