--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,11 +74,11 @@
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/about.html">¿Quién me explica?</a>
+                <a class="nav-link" href="{{ site.baseurl }}/_pages/about.html">¿Quién me explica?</a>
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/xqnosotros.html">¿Por qué con Carlos Muñiz?</a>
+                <a class="nav-link" href="{{ site.baseurl }}/_pages/xqnosotros.html">¿Por qué con Carlos Muñiz?</a>
                 </li>
 
                 {% include search-lunr.html %}
