--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/_pages/about">Quién me explica</a>
+                <a class="nav-link" href="{{ site.baseurl }}/about.md">Quién me explica</a>
                 </li>
 
                 <li class="nav-item">
