--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">¿Por qué con Carlos Muñiz?</a>
+                <a class="nav-link" href="{{ site.baseurl }}/xqnosotros">¿Por qué con Carlos Muñiz?</a>
                 </li>
 
                 {% include search-lunr.html %}
