--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,9 +77,9 @@
                 <a class="nav-link" href="{{ site.baseurl }}/about">¿Quién me explica?</a>
                 </li>
 
-                // <li class="nav-item">
-                // <a class="nav-link" href="{{ site.baseurl }}/xqnosotros">¿Por qué con Carlos Muñiz?</a>
-                // </li>
+                <!-- <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/xqnosotros">¿Por qué con Carlos Muñiz?</a>
+                </li> -->
 
                 {% include search-lunr.html %}
 
