--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">Home</a>
+                <a class="nav-link" href="{{ site.baseurl }}/index.html">¡Quiero aprender!</a>
                 </li>
 
                 <li class="nav-item">
