--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,11 +118,11 @@
 ================================================== -->
 <div class="alertbar">
 	<div class="container text-center">
-		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}"> &nbsp; Manténte al tanto de <b>nuevos artículos</b> suscríbete a nuestro newsletter</span>
+		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}"> &nbsp; Si entiendes tus seguros <b> ahorrarás </b> mucho dinero. </span>
         <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate" target="_blank" novalidate>
             <div class="mc-field-group">
             <input type="email" placeholder="Email" name="EMAIL" class="required email" id="mce-EMAIL" autocomplete="on" required>
-            <input type="submit" value="Subscribe" name="subscribe" class="heart">
+            <input type="submit" value="¡Aprende gratis!" name="subscribe" class="heart">
             </div>
         </form>
 	</div>
